--- a/inst/doc/growthTools_vignette.Rmd
+++ b/inst/doc/growthTools_vignette.Rmd
@@ -31,11 +31,17 @@ library(ggplot2)
 library(dplyr)
 library(tidyr)
 library(mleTools)
+library(reshape2)
 ```
 
 ```{r}
 # Construct example data set:
-sdat<-data.frame(trt=c(rep('A',10),rep('B',10),rep('C',10),rep('D',10)),dtime=rep(seq(1,10),4),ln.fluor=c(c(1,1.1,0.9,1,2,3,4,5,5.2,4.7),c(1.1,0.9,1,2,3,4,4.1,4.2,3.7,4)+0.3,c(3.5,3.4,3.6,3.5,3.2,2.2,1.2,0.5,0.4,0.1),c(5.5,4.5,3.5,2.5,1.5,0,0.2,-0.1,0,-0.1)))
+sdat<-data.frame(trt=c(rep('A',10),rep('B',10),rep('C',10),rep('D',10)),
+                 dtime=rep(seq(1,10),4),
+                 ln.fluor=c(c(1,1.1,0.9,1,2,3,4,5,5.2,4.7),
+                            c(1.1,0.9,1,2,3,4,4.1,4.2,3.7,4)+0.3,
+                            c(3.5,3.4,3.6,3.5,3.2,2.2,1.2,0.5,0.4,0.1),
+                            c(5.5,4.5,3.5,2.5,1.5,0,0.2,-0.1,0,-0.1)))
 ```
 
 ## Basic example: working with a single time series
@@ -127,7 +133,9 @@ The result is a grouped data frame, which we directly pass to the `do()` command
 In this instance, we request that the best fitting models are plotted, but leave the file path (`fpath`) option as `NA`, so the plots are displayed rather than saved to a directory. When working with a larger data set, the number of plots can be unwieldly, so it is recommended that you save rather than immediately display them.
 
 ```{r,error=FALSE}
-gdat <- sdat %>% group_by(trt) %>% do(grs=get.growth.rate(x=.$dtime,y=.$ln.fluor,id=.$trt,plot.best.Q=T,fpath=NA))  
+gdat <- sdat %>% group_by(trt) %>% 
+        do(grs=get.growth.rate(x=.$dtime,y=.$ln.fluor,
+                               id=.$trt,plot.best.Q=T,fpath=NA))  
 ```
 
 The resulting data frame is a complex structure - it contains the columns used for grouping (in this case, just `trt`), as well as a new column called `grs`. The entries in `grs` consist of the result of applying `get.growth.rate()` to each time series, including the identity of the best fit model, slope estimates, model contents, etc.
@@ -135,7 +143,8 @@ The resulting data frame is a complex structure - it contains the columns used f
 We can process this complex data structure further to obtain the different output that we're interested in. Say for example that we just want the best slope (growth rate) estimates, the identity of the best model, and the standard error associated with the growth rate estimate:
 
 ```{r}
-gdat %>% summarise(trt,mu=grs$best.slope,best.model=grs$best.model,best.se=grs$best.se)
+gdat %>% summarise(trt,mu=grs$best.slope,best.model=grs$best.model,
+                   best.se=grs$best.se)
 ```
 
 The result lists each population/time series, the best growth rate estimate (`mu`), and the identity of the model that produced this estimate.
@@ -143,7 +152,9 @@ The result lists each population/time series, the best growth rate estimate (`mu
 However, you can select any diagnostics you want by including them in the `summarise()` command. For example, we could also request the R2 of the best model, and the number of observations falling within the exponential phase:
 
 ```{r}
-gdat %>% summarise(trt,mu=grs$best.slope,best.model=grs$best.model,best.se=grs$best.se,best.R2=grs$best.model.rsqr,nobs.exp=grs$best.model.slope.n)
+gdat %>% summarise(trt,mu=grs$best.slope,best.model=grs$best.model,
+                   best.se=grs$best.se,best.R2=grs$best.model.rsqr,
+                   nobs.exp=grs$best.model.slope.n)
 ```
 
 
@@ -155,7 +166,10 @@ In these cases, we might prefer to tell the algorithm to just calculate growth r
 
 ```{r}
 # Only use the linear method:
-gdat <- sdat %>% group_by(trt) %>% do(grs=get.growth.rate(x=.$dtime,y=.$ln.fluor,id=.$trt,plot.best.Q=F,methods=c('linear'))) %>% summarise(trt,mu=grs$best.slope,best.model=grs$best.model)
+gdat <- sdat %>% group_by(trt) %>% 
+        do(grs=get.growth.rate(x=.$dtime,y=.$ln.fluor,id=.$trt,plot.best.Q=F,
+                               methods=c('linear'))) %>% 
+        summarise(trt,mu=grs$best.slope,best.model=grs$best.model)
 gdat
 ```
 
@@ -163,7 +177,10 @@ Or maybe we want to use the lagged, saturated, or floored models, but not linear
 
 ```{r,error=FALSE}
 # Only use the linear method:
-gdat <- sdat %>% group_by(trt) %>% do(grs=get.growth.rate(x=.$dtime,y=.$ln.fluor,id=.$trt,plot.best.Q=F,methods=c('lag','sat','flr'))) %>% summarise(trt,mu=grs$best.slope,best.model=grs$best.model)
+gdat <- sdat %>% group_by(trt) %>% 
+        do(grs=get.growth.rate(x=.$dtime,y=.$ln.fluor,id=.$trt,plot.best.Q=F,
+                               methods=c('lag','sat','flr'))) %>% 
+        summarise(trt,mu=grs$best.slope,best.model=grs$best.model)
 gdat
 ```
 
@@ -174,7 +191,10 @@ gdat
 We can also indicate which of three information criteria to use when selecting the 'best model' - AIC, AICc, or BIC. The default if no option is specified is to use AICc, which adjusts for the effects of small sample sizes, but converges on AIC in the limit of large sample sizes. Here's an example invoking BIC instead:
 
 ```{r,error=FALSE}
-gdat <- sdat %>% group_by(trt) %>% do(grs=get.growth.rate(x=.$dtime,y=.$ln.fluor,id=.$trt,plot.best.Q=F,model.selection=c('BIC'))) %>% summarise(trt,mu=grs$best.slope,best.model=grs$best.model)
+gdat <- sdat %>% group_by(trt) %>% 
+        do(grs=get.growth.rate(x=.$dtime,y=.$ln.fluor,id=.$trt,plot.best.Q=F,
+                               model.selection=c('BIC'))) %>% 
+        summarise(trt,mu=grs$best.slope,best.model=grs$best.model)
 gdat
 ```
 
@@ -199,7 +219,8 @@ Now, we can use the function `get.nbcurve.tpc()` to fit thermal performance curv
 sp1 <- example_TPC_data %>% filter(isolate.id=='CH30_4_RI_03' & dilution==1)
 
 # obtain Norberg curve parameters, using a grid search algorithm to consider a range of possible initial parameter values, and plot the results
-nbcurve.traits<-get.nbcurve.tpc(sp1$temperature,sp1$mu,method='grid.mle2',plotQ=T,conf.bandQ = T,fpath=NA)
+nbcurve.traits<-get.nbcurve.tpc(sp1$temperature,sp1$mu,method='grid.mle2',
+                                plotQ=T,conf.bandQ = T,fpath=NA)
 data.frame(nbcurve.traits)
 ```
 
@@ -210,7 +231,9 @@ But can also be automatically applied to multiple dilution periods or otherwise 
 sp1b <- example_TPC_data %>% filter(isolate.id=='CH30_4_RI_03')
 
 # apply get.nbcurve to the entire data set, grouping by isolate and dilution
-res <- sp1b %>% group_by(isolate.id,dilution) %>% do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',plotQ=T,conf.bandQ=T,fpath=NA,id=.$dilution))
+res <- sp1b %>% group_by(isolate.id,dilution) %>% 
+        do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',
+                                plotQ=T,conf.bandQ=T,fpath=NA,id=.$dilution))
 
 ```
 
@@ -227,24 +250,30 @@ This approach also allows a fair amount of customization. For example, we can sa
 You can also turn off plotting all together, or turn off only the confidence bands:
 
 ```{r,error=FALSE,warning=F}
-nb.res <- sp1b %>% group_by(isolate.id,dilution) %>% do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',plotQ=T,conf.bandQ=F,fpath=NA,id=.$dilution))
+nb.res <- sp1b %>% group_by(isolate.id,dilution) %>% 
+          do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',
+                                  plotQ=T,conf.bandQ=F,fpath=NA,id=.$dilution))
 
-sp1b %>% group_by(isolate.id,dilution) %>% do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',plotQ=F,conf.bandQ=F,fpath=NA,id=.$dilution))
+sp1b %>% group_by(isolate.id,dilution) %>% 
+         do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',
+                                 plotQ=F,conf.bandQ=F,fpath=NA,id=.$dilution))
 ```
 
 After executing any of these, you can use `summarise` to recover parameter estimates and other diagnostic information corresponding to each curve fit.
 
 ```{r}
 # process results
-nb.res2<-nb.res %>% summarise(isolate.id,dilution,topt=tpcs$o,tmin=tpcs$tmin,tmax=tpcs$tmax,rsqr=tpcs$rsqr,a=exp(tpcs$a),b=tpcs$b,w=tpcs$w)
-
+nb.res2<-nb.res %>% summarise(isolate.id,dilution,topt=tpcs$o,tmin=tpcs$tmin,
+                              tmax=tpcs$tmax,rsqr=tpcs$rsqr,
+                              a=exp(tpcs$a),b=tpcs$b,w=tpcs$w)
 nb.res2
 ```
 
 A variety of other diagnostics are available, including log likelihood of the model fit, AIC, the total number of observations the regression is based on, how many unique temperature treatments are involved, and approximate confidence intervals for the coefficients of the model (based on Fisher information). These can be accessed by including additional terms in the summarise command, for example:
 
 ```{r}
-nb.res %>% summarise(isolate.id,dilution,topt=tpcs$o,topt.lwr=tpcs$ciF[1,1],topt.upr=tpcs$ciF[1,2],ntemps=tpcs$ntemps)
+nb.res %>% summarise(isolate.id,dilution,topt=tpcs$o,topt.lwr=tpcs$ciF[1,1],
+                     topt.upr=tpcs$ciF[1,2],ntemps=tpcs$ntemps)
 ```
 
 ## Double exponential model:
@@ -256,18 +285,19 @@ Right now, model fitting using this approach is pretty slow; this model is a 5 p
 You can access this functionality the same way as fitting the Norberg curve, but using `get.decurve.tpc()` inside of the `dplyr` command:
 
 ```{r,warning=F}
-de.res <- sp1b %>% group_by(isolate.id,dilution) %>% do(tpcs=get.decurve.tpc(.$temperature,.$mu,method='grid.mle2',plotQ=T,conf.bandQ=T,fpath=NA,id=.$dilution))
+de.res <- sp1b %>% group_by(isolate.id,dilution) %>% 
+          do(tpcs=get.decurve.tpc(.$temperature,.$mu,method='grid.mle2',
+                                  plotQ=T,conf.bandQ=T,fpath=NA,id=.$dilution))
 
-de.res2 <- de.res %>% summarise(isolate.id,dilution,topt=tpcs$topt,tmin=tpcs$tmin,tmax=tpcs$tmax,rsqr=tpcs$rsqr,b1=tpcs$b1,b2=tpcs$b2,d0=tpcs$d0,d2=tpcs$d2)
-
+de.res2 <- de.res %>% summarise(isolate.id,dilution,topt=tpcs$topt,
+                                tmin=tpcs$tmin,tmax=tpcs$tmax,rsqr=tpcs$rsqr,
+                                b1=tpcs$b1,b2=tpcs$b2,d0=tpcs$d0,d2=tpcs$d2)
 de.res2
 ```
 
 It should also be straightforward to fit both types of model to your data, then try to decide which model performs best, using criteria such as R2 or AIC. For now though, here's a basic visual comparison: 
 
 ```{r,error=FALSE,warning=F}
-library(reshape2)
-
 nb.res3<-melt(nb.res2,id.vars=c('isolate.id','dilution'))
 de.res3<-melt(de.res2,id.vars=c('isolate.id','dilution'))
 res2<-rbind(data.frame(type='nb',nb.res3),data.frame(type='de',de.res3))
@@ -288,9 +318,13 @@ table(example_TPC_data[,c('isolate.id','dilution')])
 # create informative ID column for each combo of unique strain and dilution period:
 example_TPC_data$id<-paste(example_TPC_data$isolate.id,example_TPC_data$dilution)
 
-res2 <- example_TPC_data %>% group_by(isolate.id,dilution) %>% do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',plotQ=F,conf.bandQ=F,fpath=NA,id=.$id))
+res2 <- example_TPC_data %>% group_by(isolate.id,dilution) %>% 
+        do(tpcs=get.nbcurve.tpc(.$temperature,.$mu,method='grid.mle2',
+                                plotQ=F,conf.bandQ=F,fpath=NA,id=.$id))
 
-clean.res <- res2 %>% summarise(isolate.id,dilution,topt=tpcs$o,tmin=tpcs$tmin,tmax=tpcs$tmax,rsqr=tpcs$rsqr,a=exp(tpcs$a),b=tpcs$b,w=tpcs$w)
+clean.res <- res2 %>% summarise(isolate.id,dilution,topt=tpcs$o,
+                                tmin=tpcs$tmin,tmax=tpcs$tmax,rsqr=tpcs$rsqr,
+                                a=exp(tpcs$a),b=tpcs$b,w=tpcs$w)
 data.frame(clean.res)
 ```
 
